Added markers and popups. On click popup needs to be fixed.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,3 +10,10 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.popup {
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+  height: 250px;
+}
