--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,6 +23,15 @@ form {
   flex-direction: column;
 }
 
+label {
+  font-size: 1.2rem;
+}
+
+h2 {
+  font-size: 1rem;
+  margin: 0;
+}
+
 .mapboxgl-popup {
   z-index: 10;
 }
