--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -84,25 +84,72 @@ p.hint {
 }
 
 .mapStyleButton {
-  background-color: rgb(87, 87, 87);
+  background-color: rgba(87, 87, 87, 0.8);
   position: absolute;
   right: 10px;
   padding: 0 0.6rem;
-  top: 10px;
-  border-radius: 50px;
+  bottom: 30px;
+  border-radius: 5px;
 }
 
 .viewText {
   font-family: "Roboto", sans-serif;
   color: white;
   font-size: 1.2rem;
+  font-weight: 200;
 }
 
 .aboutButton {
-  background-color: rgb(87, 87, 87);
+  background-color: rgba(87, 87, 87, 0.8);
   position: absolute;
-  right: 150px;
+  right: 10px;
   padding: 0 0.6rem;
   top: 10px;
-  border-radius: 50px;
+  border-radius: 5px;
+}
+
+.latestButton {
+  background-color: rgba(87, 87, 87, 0.8);
+  position: absolute;
+  right: 10px;
+  padding: 0 0.6rem;
+  top: 70px;
+  border-radius: 5px;
+}
+
+.aboutButton:hover,
+.mapStyleButton:hover,
+.latestButton:hover {
+  background-color: rgba(156, 156, 156, 0.8);
+  cursor: pointer;
+}
+
+.latestReports {
+  position: absolute;
+  z-index: 15;
+  top: 250px;
+  right: 1%;
+  margin: -100px 0 0 -150px;
+  background-color: white;
+  width: auto;
+  height: 50%;
+  overflow: scroll;
+}
+
+@media only screen and (max-width: 960px) {
+  .aboutButton {
+    background-color: rgba(87, 87, 87, 0.8);
+    position: absolute;
+    right: 10px;
+    padding: 0 0.6rem;
+    top: 10px;
+    border-radius: 5px;
+  }
+  .mapStyleButton {
+    background-color: rgba(87, 87, 87, 0.8);
+    position: absolute;
+    bottom: 40px;
+    padding: 0 0.6rem;
+    border-radius: 5px;
+  }
 }
