--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -96,21 +96,12 @@ select {
   font-weight: 200;
 }
 
-.aboutButton {
-  background-color: rgba(87, 87, 87, 0.8);
-  position: absolute;
-  right: 10px;
-  padding: 0 0.6rem;
-  top: 10px;
-  border-radius: 5px;
-}
-
 .latestButton {
   background-color: rgba(87, 87, 87, 0.8);
   position: absolute;
   right: 10px;
   padding: 0 0.6rem;
-  top: 70px;
+  top: 10px;
   border-radius: 5px;
 }
 
@@ -124,21 +115,23 @@ select {
 .latestReports {
   position: absolute;
   z-index: 15;
-  top: 230px;
-  right: 1%;
+  top: 170px;
+  right: 10px;
   margin: -100px 0 0 -150px;
   background-color: white;
-  width: 250px;
+  width: 270px;
   height: 60%;
   overflow: scroll;
-  border-radius: 10px;
+  border-radius: 5px;
+  box-shadow: 10px 10px 20px rgb(71, 71, 71);
 }
 
 .latestEntry {
-  background-color: gray;
+  background-color: rgb(197, 197, 197);
   border-radius: 10px;
-  margin: 5px;
+  margin: 10px 5px;
   padding: 5px;
+  margin-right: 15px;
 }
 
 .latestEntry:hover {
@@ -149,32 +142,40 @@ select {
 .latestTitle {
   padding: 0;
   margin: 0;
+  margin-bottom: 0.5rem;
+  font-size: 1.2rem;
 }
 
 .latestType {
   padding: 0;
   margin: 0;
+  margin-bottom: 0.5rem;
+  font-size: 1.2rem;
 }
 
 .latestTime {
   padding: 0;
   margin: 0;
+  font-size: 1rem;
+}
+
+.titleEntry {
+  margin: 0;
+  padding: 0;
+  font-size: 1rem;
+  color: rgb(71, 71, 71);
 }
 
 @media only screen and (max-width: 960px) {
-  .aboutButton {
-    background-color: rgba(87, 87, 87, 0.8);
-    position: absolute;
-    right: 10px;
-    padding: 0 0.6rem;
-    top: 10px;
-    border-radius: 5px;
-  }
   .mapStyleButton {
-    background-color: rgba(87, 87, 87, 0.8);
-    position: absolute;
     bottom: 40px;
-    padding: 0 0.6rem;
-    border-radius: 5px;
+  }
+
+  .latestButton {
+    top: 70px;
+  }
+
+  .latestReports {
+    top: 250px;
   }
 }
