--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -67,7 +67,7 @@ select {
 }
 
 .submit {
-  background-color: rgb(224, 193, 193);
+  background-color: rgb(192, 119, 119);
   border: none;
   width: 50%;
 
@@ -75,6 +75,11 @@ select {
 
   border-radius: 20px;
   padding: 0.6rem 0;
+  cursor: pointer;
+}
+
+.submit:hover {
+  background-color: rgb(190, 142, 142);
 }
 
 .mapboxgl-popup {
@@ -166,6 +171,12 @@ select {
   color: rgb(71, 71, 71);
 }
 
+.mapboxgl-ctrl,
+.mapboxgl-ctrl-group {
+  margin-left: 260px;
+  margin-top: 12px;
+}
+
 @media only screen and (max-width: 960px) {
   .mapStyleButton {
     bottom: 40px;
@@ -177,5 +188,11 @@ select {
 
   .latestReports {
     top: 250px;
+  }
+
+  .mapboxgl-ctrl,
+  .mapboxgl-ctrl-group {
+    margin-left: 320px;
+    margin-top: 12px;
   }
 }
